Fractal-pictures: Add scroll to top menu in order to fix the unreachable menu content on mobile browsers

--- a/fractal-pictures/public/css/fractal-pictures.css
+++ b/fractal-pictures/public/css/fractal-pictures.css
@@ -32,6 +32,8 @@ body {
     position: fixed;
     right: 0;
     left: 0;
+    max-height: calc(100% - 35px);
+    overflow-y: auto;
 }
 
 .pad-10 {
